--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                         <a href="#">First</a>
                         <a href="#">Second</a>
                         <a href="#">Third</a>
+                        <a href="#">Fourth</a>
+                        <a href="#">Fifth</a>
                     </span>
                 </span>
             </span>
@@ -51,33 +53,33 @@
             <input id="get-started-button-main" type="button" value="Get Started" />
             
         </div>
-        <div class="main-content-cards">
+        <div class="card-container">
             <div class="card">
                 <span class="card-heading">
                     <i class="fa fa-stack-exchange" aria-hidden="true"></i>
                     Lorem ipsum
                 </span>
-                <span class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
+                <span class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing Lorem, ipsum dolor.</span >
                 </div>
             <div class="card">
                 <span class="card-heading">
                     <i class="fa fa-codiepie" aria-hidden="true"></i> Lorem ipsum
                 </span>
-                <span class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
+                <span class="card-text">Lorem ipsum dolor sit amet Lorem, ipsum dolor. consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
                 </div>
             <div class="card">
                 <span class="card-heading">
                     <i class="fa fa-bars" aria-hidden="true"></i>
 Lorem ipsum
                 </span>
-                <span class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
+                <span class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing. dolor sit amet consectetur Lorem, ipsum dolor. adipisicing</span >
                 </div>
             <div class="card">
                 <span class="card-heading">
                     <i class="fa fa-print" aria-hidden="true"></i>
 Lorem ipsum
                 </span>
-                <span class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
+                <span class="card-text">Lorem ipsum dolor,Lorem, ipsum dolor. sit amet consectetur adipisicing. dolor sit amet consectetur adipisicing</span >
                 </div>
             
 
